# house-pricing-api

./: README.md  REQUIREMENTS.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py  monitoring.py
app/v1/: router.py  schemas.py  services.py
tests/: __init__.py
tests/data/: bad-data.json  sample-data.json
tests/v1/: test_schemas.py
